--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,6 @@ name: ci
 
 on:
   pull_request:
-    branches: [ main ]
   push:
     branches: [ main ]
   workflow_dispatch:
@@ -35,7 +34,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-      - run: yarn global install yaml-lint
+      - run: yarn global add yaml-lint
       - run: yamllint action.yml
 
   build:
